findFirstXxx functions in ResultSet were redeveloped.